прикручує js і додає слайдери

--- a/src/sass/layout/_recall.scss
+++ b/src/sass/layout/_recall.scss
@@ -1,19 +1,24 @@
 .section_slider {
-    background-color: #E5E5E5;
+    background-color: $light-bg-color;
     width: 100%;
     }
     
     .sl {
         padding-top: 80px;
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
     
     @media screen and (min-width: 768px) {
         padding-top: 121px;
-    
+        width: 620px;
+    }
     @media screen and (min-width: 1280px) {
         padding-top: 123px;
+        width: 926px;
     }
     }
-    }
+    
     
     .sl__img {
         display: flex;
@@ -37,8 +42,8 @@
         min-height: 308px;
         margin-left: auto;
         margin-right: auto;
-        background-color: #FAFAFA;
-        background-image: url(../../images/testimonuals/lapki.svg);
+        background-color: $bg-slider;
+        // background-image: url(../../images/testimonuals/lapki.svg);
         background-repeat: no-repeat;
         background-position: 61px 28px;
        
@@ -68,18 +73,18 @@
     font-size: 12px;
     line-height: 2.55;
     text-align: center;
-    color: #000000;
+    color: $primari-text-color;
     
     
     
-    background-image: url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg),
-    url(../../images/testimonuals/vector-tel.svg);
+    // background-image: url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg),
+    // url(../../images/testimonuals/vector-tel.svg);
     background-repeat: no-repeat;
     background-position: left 51px top 71px, left 51px top 102px, left 51px top 133px, 
     left 51px top 164px, left 51px top 195px, left 51px top 226px, left 51px top 257px, left 51px top 288px;
@@ -92,9 +97,9 @@
         line-height: 2.16;
         letter-spacing: 0.04em;
     
-        background-image: url(../../images/testimonuals/vector-tablet.svg),
-        url(../../images/testimonuals/vector-tablet.svg),
-        url(../../images/testimonuals/vector-tablet.svg);
+        // background-image: url(../../images/testimonuals/vector-tablet.svg),
+        // url(../../images/testimonuals/vector-tablet.svg),
+        // url(../../images/testimonuals/vector-tablet.svg);
         background-repeat: no-repeat;
         background-position: left 60px top 76px, left 60px top 106px, left 60px top 136px;
     }
@@ -106,17 +111,30 @@
         line-height: 1.86;
         letter-spacing: 0.04em;
     
-        background-image: url(../../images/testimonuals/vector-decstop.svg),
-        url(../../images/testimonuals/vector-decstop.svg);
+        // background-image: url(../../images/testimonuals/vector-decstop.svg),
+        // url(../../images/testimonuals/vector-decstop.svg);
         background-repeat: no-repeat;
         background-position: left 59px top 75px, left 59px top 106px;
     }
     
     }
     
+    .sl__dot {
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 30px;
     
+        @media screen and (min-width: 768px) {
+            margin-top: 24px;
+        }
+        
+        @media screen and (min-width: 1280px) {
+            margin-top: 15px;
+        }
+    }
+
     .sl__name {
-    margin-top: 52px;
+    margin-top: 18px;
     
     font-family: DM Sans, sans-serif;
     font-style: normal;
@@ -124,31 +142,31 @@
     font-size: 14px;
     line-height: 1,86;
     text-align: center;
-    color: #000000;
+    color: $primari-text-color;
     
     @media screen and (min-width: 768px) {
-        margin-top: 42px;
-        font-size: 16px;
-    }
+    margin-top: 14px;
+    font-size: 16px;
+}
+
+@media screen and (min-width: 1280px) {
+    margin-top: 15px;
+    font-size: 20px;
+}
+}
     
-    @media screen and (min-width: 1280px) {
-        margin-top: 34px;
-        font-size: 20px;
-    }
-    
-    
-    }
-    
-    .sl__poins {
-        width: 73px;
-       margin-right: calc((100% - 73px ) / 2);
+    .sl__points {
+        direction: flex;
+        justify-content: center;
+        text-align: center;
     }
     
     .sl__points-icon {
         display: inline-block;
+        
         width: 12px;
         height: 12px;
-        background: #D9D9D9;
+        background-color: #D9D9D9;
         border-radius: 50%;
         padding: 0;
     }
@@ -161,4 +179,5 @@
         display: inline-block;
         width: 12.4px;
         height: 11.84px;
+        list-style-type: none;
     }
