--- a/src/partials/team.html
+++ b/src/partials/team.html
@@ -1,25 +1,75 @@
 <section class="container section_slider">
 
-    <div class="sl">
-        <div class="sl__slider">
-            <img
-                source srcset="./images/testimonuals/testimonials1.png 1x, ./images/testimonuals/testimonials1@2x.png 2x"
-                class="sl__img" src="./images/testimonuals/testimonials1.png" 
-                alt="фото человека, который оставил отзыв"
-                width="85"
-            />
-
-            <div class="sl__text">
-                <p class="sl__desc">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+    
+        <div class="sl">
+            <div class="sl__slider">
+                <img
+                    source srcset="./images/testimonuals/testimonials1.png 1x, ./images/testimonuals/testimonials1@2x.png 2x"
+                    class="sl__img" src="./images/testimonuals/testimonials1.png" 
+                    alt="фото человека, который оставил отзыв"
+                    width="85"
+                />
+    
+                <div class="sl__text">
+                    <p class="sl__desc">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+                </div>
+                
+                <h3 class="sl__name">Emily, Los Angeles</h3>
+                <div class="sl__points">
+                <div class="sl__points-home icon">
+                    <img src="./images/testimonuals/home.svg" alt="иконка домика">
+                </div>
+                <div class="sl__points-icon icon"></div>
+                <div class="sl__points-icon icon"></div>
+                </div>
             </div>
-            <h3 class="sl__name">Emily, Los Angeles</h3>
-            <ul class="sl__points">
-            <li class="sl__points-home icon">
-                <img src="../images/testimonuals/home.svg" alt="иконка домика">
-            </li>
-            <li class="sl__points-icon icon"></li>
-            <li class="sl__points-icon icon"></li>
-        </ul>
-        </div>
-    </div>
+
+
+            <div class="sl__slider">
+                <img
+                    source srcset="./images/testimonuals/testimonials1-1.png 1x, 
+                    ./images/testimonuals/testimonials1-1@2x.png 2x"
+                    class="sl__img" src="./images/testimonuals/testimonials1-1.png" 
+                    alt="фото человека, который оставил отзыв"
+                    width="85"
+                />
+    
+                <div class="sl__text">
+                    <p class="sl__desc">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+                </div>
+                
+                <h3 class="sl__name">Emily, Los Angeles</h3>
+                <div class="sl__points">
+                <div class="sl__points-home icon">
+                    <img src="./images/testimonuals/home.svg" alt="иконка домика">
+                </div>
+                <div class="sl__points-icon icon"></div>
+                <div class="sl__points-icon icon"></div>
+                </div>
+            </div>
+
+            <div class="sl__slider">
+                <img
+                    source srcset="./images/testimonuals/testimonials1-2.png 1x, 
+                    ./images/testimonuals/testimonials1-2@2x.png 2x"
+                    class="sl__img" src="./images/testimonuals/testimonials1-2.png" 
+                    alt="фото человека, который оставил отзыв"
+                    width="85"
+                />
+    
+                <div class="sl__text">
+                    <p class="sl__desc">Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis in nibh vel risus.</p>
+                </div>
+                
+                <h3 class="sl__name">Emily, Los Angeles</h3>
+                <div class="sl__points">
+                <div class="sl__points-home icon">
+                    <img src="./images/testimonuals/home.svg" alt="иконка домика">
+                </div>
+                <div class="sl__points-icon icon"></div>
+                <div class="sl__points-icon icon"></div>
+                </div>
+            </div>
+            </div>
+    
 </section>
