--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -7,6 +7,13 @@
     padding-top: 122px;
     padding-bottom: 112px;
   }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 127px;
+    padding-bottom: 119px;
+    padding-left: 75px;
+    padding-right: 75px;
+  }
 }
 
 .products-slogan {
@@ -23,6 +30,11 @@
   @media screen and (min-width: 768px) {
     font-size: 26px;
     line-height: 1.15;
+  }
+
+   @media screen and (min-width: 1200px) {
+    font-size: 30px;
+    line-height: 1.13;
   }
 }
 
@@ -41,6 +53,13 @@
     margin-bottom: 150px;
     font-size: 48px;
     line-height: 1.14;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-bottom: 259px;
+    font-size: 58px;
+    line-height: 1.14;
+    letter-spacing: 0.06em;
   }
 }
 
@@ -75,6 +94,18 @@
     padding-right: 11px;
     &:not(:last-child) {
       margin-right: 20px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 30px) / 3);
+    margin-bottom: 0;
+    padding-top: 163px;
+    padding-bottom: 50px;
+    padding-left: 44px;
+    padding-right: 44px;
+    &:not(:last-child) {
+      margin-right: 30px;
     }
   }
 }
@@ -119,7 +150,35 @@
       top: -102px;
     }
   }
+
+  
 }
+
+@media screen and (min-width: 1200px) {
+  .products-foto-first {
+      width: 335px;
+      height: 335px;
+      top: -210px;
+      right: -5px;
+      
+    }
+
+    .products-foto-second {
+      width: 337px;
+      height: 335px;
+      top: -210px;
+      right: -5px;
+      
+    }
+
+    .products-foto-third {
+      width: 335px;
+      height: 335px;
+      top: -210px;
+      right: -5px;
+    }
+
+  }
 
 .products-gallery-title {
   margin: 0;
@@ -129,6 +188,12 @@
   line-height: 1.15;
   text-align: center;
   text-transform: uppercase;
+
+  @media screen and (min-width: 767px) {
+    font-size: 30px;
+  line-height: 1.13;
+  margin-bottom: 32px;
+  }
 }
 
 .products-gallery-text {
@@ -177,7 +242,9 @@
     font-weight: bold;
     font-size: 14px;
     line-height: 1.78;
+    letter-spacing: 0.04em;
     text-align: center;
+
 
     &::after {
       display: block;
@@ -196,6 +263,33 @@
   }
 }
 
+@media screen and (min-width: 1200px) {
+    .products-gallery-text-short{
+      
+      font-weight: bold;
+      font-size: 16px;
+      line-height: 1.69;
+      letter-spacing: 0.04em;
+
+       &::after {
+      display: block;
+      content: '';
+      width: 40px;
+      height: 40px;
+      background-color: $white;
+      border-radius: 50%;
+      background-size: 40px 40px;
+      background-repeat: no-repeat;
+      background-position: center;
+      margin-top: 62px;
+     
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    }
+}
+
 .arrow-right::after {
   background-image: url(../images/products/arrow-right.jpg);
 }
@@ -205,6 +299,11 @@
   justify-content: center;
   flex-direction: row;
   margin-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 32px;
+  }
+
 }
 
 .products-circle {
