--- a/src/sass/_how-its-made.scss
+++ b/src/sass/_how-its-made.scss
@@ -1,8 +1,172 @@
-.manufacture-title {
-  color: red;
-  font-size: 15px;
+.manufacture {
+  background-color: $footer-bg;
+  padding-top: 125px;
+  padding-bottom: 100px;
+
+  @media screen and(min-width:768px) {
+    padding-top: 130px;
+    padding-bottom: 140px;
+  }
+
+  @media screen and(min-width:1200px) {
+    padding-top: 125px;
+  }
 }
-.manufacture-sub-title {
-  color: aqua;
-  font-size: 28px;
+
+.manufacture-title {
+  padding-bottom: 15px;
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.16;
+  text-align: center;
+  text-transform: uppercase;
+  color: $advanced-bg;
+
+  @media screen and(min-width:768px) {
+    font-size: 26px;
+  }
+}
+
+.manufacture-subtitle {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 34px;
+  line-height: 1.14;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: $accent-color;
+  padding-right: 15px;
+
+  @media screen and(min-width:768px) {
+    font-size: 48px;
+  }
+}
+
+.cont-box {
+  @media screen and(min-width:768px) {
+    display: flex;
+  }
+}
+
+.manufacture-box {
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-bottom: 45px;
+}
+
+.manufacture-text {
+  margin-bottom: 45px;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.58;
+
+  color: #000000;
+
+  @media screen and(min-width:768px) {
+    font-size: 14px;
+  }
+}
+
+.manufacture-subtext {
+  margin-bottom: 18px;
+  padding-left: 50px;
+  padding-right: 50px;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1.58;
+  color: #907e82;
+
+  @media screen and(min-width:768px) {
+    font-size: 14px;
+  }
+}
+
+.bg {
+  @media screen and(max-width:767px) {
+    background-image: url('/images/mobile/manufacture-milk.png');
+    background-repeat: no-repeat;
+  }
+}
+
+.bottom-manufacture {
+  margin-left: 50px;
+  width: 176px;
+  height: 44px;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.28;
+  align-items: center;
+  text-align: center;
+  color: #d41443;
+
+  background: $main-color;
+  border-radius: 22px;
+}
+
+.bottom-manufacture:hover {
+  cursor: pointer;
+  background: #ecebeb;
+}
+
+.bottom-arrow {
+  margin-left: 14px;
+}
+.manufacture-list-item {
+  margin-top: 40px;
+  margin-left: 20px;
+  margin-right: 70px;
+}
+
+.manufacture-list-item::before {
+  display: block;
+  content: '';
+  height: 50px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: left;
+  margin-bottom: 16px;
+}
+
+.bucket::before {
+  background-image: url('/images/svg/hm-icon1.svg');
+}
+
+.fruits::before {
+  background-image: url('/images/svg/hm-icon2.svg');
+}
+
+.heart::before {
+  background-image: url('/images/svg/hm-icon3.svg');
+}
+
+.manufacture-item-num {
+  font-family: Titan One;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 1.13;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: $accent-color;
+}
+
+.manufacture-item-text {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 1.66;
+  color: #000000;
 }
