--- a/src/partials/page-footer.html
+++ b/src/partials/page-footer.html
@@ -1,13 +1,17 @@
 <footer class="page-footer">
   <div class="container">
-    <!-- Ваш код здесь -->
+    <!-- Основной блок с текстом и иконками.
+      Содержит в себе 2 блока, которые меняют расположение
+      в зависимости от размера вьюпорта-->
     <div class="container-footer">
+      <!-- Блок: текст -->
       <div class="section-title">
         <ul class="ul-title">
           <li class="homemade-text">homemade ice cream made</li>
           <li class="passion-text">with passion</li>
         </ul>
       </div>
+      <!-- Блок: иконки и подпись -->
       <div class="section-icon">
         <div>
           <ul class="ul-icon">
@@ -46,65 +50,9 @@
       </div>
 
     </div>
-
+    <!-- Подпись футера -->
   </div>
-  <div class="reserved">© 2019 - IceCream. All Rights Reserved.</div>
+  <div class="section-reserved">
+    <div class="reserved"> © 2019 - IceCream. All Rights Reserved.</div>
+  </div>
 </footer>
-
-<!--  образец вставки контентного изображения
-  <picture>
-  <source
-    srcset="
-      ./images/products/mobile/product-1.webp    1x,
-      ./images/products/mobile/product-1@2x.webp 2x
-    "
-    media="(min-width: 320px) and (max-width: 767px)"
-    type="image/webp"
-  />
-  <source
-    srcset="
-      ./images/products/tablet/product-1.webp    1x,
-      ./images/products/tablet/product-1@2x.webp 2x
-    "
-    media="(min-width: 768px) and (max-width: 1199px)"
-    type="image/webp"
-  />
-  <source
-    srcset="
-      ./images/products/desktop/product-1.webp    1x,
-      ./images/products/desktop/product-1@2x.webp 2x
-    "
-    media="(min-width: 1200px)"
-    type="image/webp"
-  />
-  <source
-    srcset="
-      ./images/products/mobile/product-1.png    1x,
-      ./images/products/mobile/product-1@2x.png 2x
-    "
-    media="(min-width: 320px) and (max-width: 767px)"
-  />
-  <source
-    srcset="
-      ./images/products/tablet/product-1.png    1x,
-      ./images/products/tablet/product-1@2x.png 2x
-    "
-    media="(min-width: 768px) and (max-width: 1199px)"
-  />
-  <source
-    srcset="
-      ./images/products/desktop/product-1.png    1x,
-      ./images/products/desktop/product-1@2x.png 2x
-    "
-    media="(min-width: 1200px)"
-  />
-  <img
-    class=""
-    srcset="
-      ./images/products/mobile/product-1.png    1x,
-      ./images/products/mobile/product-1@2x.png 2x
-    "
-    src="./images/products/mobile/product-1.png"
-    alt="Описание"
-  />
-</picture> -->
