--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -1,4 +1,5 @@
 .overley {
+  position: relative;
   background: linear-gradient(to bottom, #ffffff 84px, #fff5f6 84px);
 }
 
@@ -180,6 +181,18 @@
 }
 
 @media screen and (min-width: 1200px) {
+  .cover {
+    position: absolute;
+    top: 35%;
+    left: 0;
+    transform: translate(0, -50%);
+    width: 100%;
+    height: 333px;
+    background-image: url(../images/section5/img51-desktop.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+  }
+
   .overley {
     background-repeat: no-repeat;
   }
