Добавляет скрипт анимации при скроле + добавляет анимацию секции Products

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,11 +1,13 @@
 <section class="products">
   <div class="container">
     <h2 class="products-title">
-      <p class="title-accent">100% natural</p>
-      products
+      <p class="title-accent" data-aos="products-card-title-animation">
+        100% natural
+      </p>
+      <span data-aos="products-card-title-animation"> products</span>
     </h2>
     <ul class="products-list flex list">
-      <li class="products-card">
+      <li class="products-card" data-aos="slide-up">
         <picture>
           <source
             srcset="
@@ -55,7 +57,7 @@
           </svg>
         </a>
       </li>
-      <li class="products-card">
+      <li class="products-card" data-aos="slide-up" data-aos-delay="100">
         <picture>
           <source
             srcset="
@@ -105,7 +107,7 @@
           </svg>
         </a>
       </li>
-      <li class="products-card">
+      <li class="products-card" data-aos="slide-up" data-aos-delay="200">
         <picture>
           <source
             srcset="
