--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,5 +1,6 @@
 @import './utils/variables';
 @import './utils/mixins';
+@import './utils/animations';
 @import './base/common';
 @import './components/buttons';
 @import './layouts/header';
