--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -1,6 +1,6 @@
-.products * {
-  outline: 1px solid blue;
-}
+// .products * {
+//   outline: 1px solid blue;
+// }
 
 .products {
   margin: 0;
@@ -260,6 +260,7 @@
       &:focus {
         // fill: $white;
         // background-color: $primary-accent;
+        background: #ecebeb;
         box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.1);
         transform: scale(1.2);
       }
