--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,6 +1,6 @@
 <section class="gallery">
-  <div class="container">
-    <picture
+  <div class="container gallery-container">
+    <picture class="gallery-picture"
       ><source
         srcset="
           ./images/pictures/gallery/desktop/galleri-1280@1x.png 1x,
@@ -20,7 +20,6 @@
         "
         media="(max-width:767px)" />
       <img
-        class="gallery-picture"
         src="./images/pictures/gallery/mobile/galleri-320@1x.png"
         alt="gallery"
     /></picture>
