--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -20,16 +20,10 @@
         </svg>
       </button>
       <div class="header-menu" data-menu>
-        <button class="header-menu-button btn">
+        <button class="btn-header btn">
           Buy now
-          <svg
-            class="header-menu-svg"
-            aria-label="Переход на мгновенную покупку"
-          >
-            <use
-              class="header-menu-arrow"
-              href="../src/images/icons/sprite.svg#tip"
-            ></use>
+          <svg class="arrow-svg" aria-label="Переход на мгновенную покупку">
+            <use href="../src/images/icons/sprite.svg#tip"></use>
           </svg>
         </button>
         <div class="header-menu-tablet">
