--- a/src/sass/layouts/_gallery.scss
+++ b/src/sass/layouts/_gallery.scss
@@ -1,4 +1,13 @@
 .gallery-picture {
-  margin-left: auto;
-  margin-right: auto;
+  position: relative;
+  top: -54px;
+
+  @include for-size(tablet) {
+    left: -40px;
+    top: -110px;
+  }
+  @include for-size(desktop) {
+    left: -115px;
+    top: -175px;
+  }
 }
