--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,5 +1,10 @@
 .header-container {
-  background-color: #ffb8ca;
+  // background-color: #ffb8ca;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 55;
 }
 .header-wrapper {
   @include for-size(mobile-only) {
@@ -14,11 +19,9 @@
   align-items: center;
   @include for-size(mobile-only) {
     padding-top: 6px;
-    padding-bottom: 6px;
   }
   @include for-size(tablet) {
     padding-top: 37px;
-    padding-bottom: 37px;
   }
   @include for-size(desktop) {
     padding-top: 37px;
@@ -30,7 +33,7 @@
   margin-right: auto;
   @include for-size(desktop) {
     position: absolute;
-    left: -4%;
+    left: -5%;
   }
 }
 .header-burger-button {
@@ -120,18 +123,18 @@
     flex-direction: row-reverse;
     align-items: center;
   }
-  .header-menu-button {
-    transition: color 250ms $timing-function,
-      background-color 250ms $timing-function;
-    @include for-size(tablet) {
-      margin-bottom: 19px;
-      margin-left: 0px;
-    }
-    @include for-size(desktop) {
-      margin-bottom: 0px;
-      margin-left: 110px;
-    }
-  }
+  // .header-menu-button {
+  //   transition: color 250ms $timing-function,
+  //     background-color 250ms $timing-function;
+  //   @include for-size(tablet) {
+  //     margin-bottom: 19px;
+  //     margin-left: 0px;
+  //   }
+  //   @include for-size(desktop) {
+  //     margin-bottom: 0px;
+  //     margin-left: 110px;
+  //   }
+  // }
 }
 // .header-menu-button:hover,
 // .header-menu-button:focus {
@@ -160,35 +163,33 @@
     display: flex;
   }
 }
-.header-menu-button {
-  padding: 0px;
+// .header-menu-button {
+//   padding: 0px;
 
-  border: 1px solid wheat;
+//   border: 1px solid wheat;
 
-  background-color: $white;
-  min-width: 209px;
-  align-items: center;
+//   background-color: $white;
+//   min-width: 209px;
+//   align-items: center;
 
-  @include for-size(mobile-only) {
-    margin-bottom: 22px;
-  }
-  @include for-size(tablet) {
-    margin: 0px;
-    margin-left: 30px;
-    // margin-bottom: 19px;
-  }
-  @include for-size(desktop) {
-    margin: 0px;
-    margin-left: 110px;
-  }
-}
-.header-menu-svg {
-  width: 6px;
-  height: 8px;
-  fill: $primary-accent;
-  margin-left: 25px;
-  transition: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+//   @include for-size(mobile-only) {
+//     margin-bottom: 22px;
+//   }
+//   @include for-size(tablet) {
+//     margin: 0px;
+//     margin-left: 30px;
+//     // margin-bottom: 19px;
+//   }
+//   @include for-size(desktop) {
+//     margin: 0px;
+//     margin-left: 110px;
+//   }
+// }
+.arrow-svg {
+  width: 8px;
+  height: 10px;
+  fill: currentColor;
+  margin-left: 12px;
 }
 .header-navigation {
   padding: 0px;
