--- a/src/partials/slider.html
+++ b/src/partials/slider.html
@@ -19,11 +19,13 @@
           height="85"
         />
       </picture>
-      <p class="slider-text">
-        Nullam viverra consectetuer. Quisque cursus et, porttitor risus. Aliquam
-        sem. In hendrerit nulla quam nunc, accumsan congue. Lorem ipsum primis
-        in nibh vel risus.
-      </p>
+      <div class="slider-box">
+        <p class="slider-text">
+          Nullam viverra consectetuer. Quisque cursus et, porttitor risus.
+          Aliquam sem. In hendrerit nulla quam nunc, accumsan congue. Lorem
+          ipsum primis in nibh vel risus.
+        </p>
+      </div>
       <h3 class="slider-title">Emily, Los Angeles</h3>
     </div>
     <div class="slider-item">
@@ -44,10 +46,12 @@
           height="85"
         />
       </picture>
-      <p class="slider-text">
-        Nullam viverra consectetuer. Lorem ipsum dolor sit amet consectetur
-        adipisicing elit. Perferendis, enim?
-      </p>
+      <div class="slider-box">
+        <p class="slider-text">
+          Nullam viverra consectetuer. Lorem ipsum dolor sit amet consectetur
+          adipisicing elit. Perferendis, enim?
+        </p>
+      </div>
       <h3 class="slider-title">X, Chicago</h3>
     </div>
     <div class="slider-item">
@@ -68,11 +72,13 @@
           height="85"
         />
       </picture>
-      <p class="slider-text">
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis aut
-        incidunt iusto enim, nostrum amet modi ipsum accusantium consectetur non
-        sed cumque voluptates labore.
-      </p>
+      <div class="slider-box">
+        <p class="slider-text">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Corporis aut
+          incidunt iusto enim, nostrum amet modi ipsum accusantium consectetur
+          non sed cumque voluptates.
+        </p>
+      </div>
       <h3 class="slider-title">Y, New York</h3>
     </div>
   </div>
