--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -2,6 +2,7 @@
 @import './base/fonts';
 @import './base/common';
 @import './utils/breakpoints';
+@import './utils/mixins';
 @import './components/container';
 @import './layouts/header';
 @import './components/modal-menu';
