--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -76,11 +76,11 @@
         </ul>
     </div>
     <div class="contacts-btns">
-        <button class="btn contacts-btn">Our Locations <svg class="arrow-icon" width=12 height=12>
-            <use href="./images/icons/sprite.svg#corner-right"></use>
+        <button class="btn contacts-btn">Our Locations <svg class="go-icon" width=16 height=16>
+            <use href="./images/icons/sprite.svg#icon-go-icon"></use>
         </svg> </button>
-        <button class="btn2 contacts-btn2">Franchise<svg class="arrow-icon" width=12 height=12>
-            <use href="./images/icons/sprite.svg#corner-right"></use>
+        <button class="btn2 contacts-btn2">Franchise<svg class="go-icon2" width=16 height=16>
+            <use href="./images/icons/sprite.svg#icon-go-icon"></use>
         </svg></button>
     </div>
 </section>
