--- a/src/sass/layout/_contacts.scss
+++ b/src/sass/layout/_contacts.scss
@@ -210,3 +210,13 @@
   position: absolute;
   z-index: 10;
 }
+
+.go-icon {
+  margin-left: 10px;
+  fill: #ffffff;
+}
+
+.go-icon2 {
+  margin-left: 10px;
+  fill: #d41443;
+}
