добавлена секция галереи

--- a/src/partials/section-features.html
+++ b/src/partials/section-features.html
@@ -1,85 +1,93 @@
-<section class="container features features-bg">
-  <ul class="list features-flex">
-    <li class="features-blok">
-      <picture>
-        <source
-          srcset="
-            ./images/products-icon/webp/milk.webp    1x,
-            ./images/products-icon/webp/milk@2x.webp 2x
-          "
-          media="(min-width: 320px)"
-          type="image/webp"
-        />
-        <source
-          srcset="
-            images/products-icon/png/milk.png    1x,
-            images/products-icon/png/milk@2x.png 2x
-          "
-          media="(min-width: 320px)"
-        />
-        <img
-          class=""
-          src="./images/products-icon/webp/milk.webp"
-          alt="icon milk"
-          width="33"
-        />
-      </picture>
-      <p class="features-item">721</p>
-      <span class="features-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</span>
-    </li>
-    <li class="features-blok">
-      <picture>
-        <source
-          srcset="
-            ./images/products-icon/webp/apple.webp    1x,
-            ./images/products-icon/webp/apple@2x.webp 2x
-          "
-          media="(min-width: 320px)"
-          type="image/webp"
-        />
-        <source
-          srcset="
-            images/products-icon/png/apple.png    1x,
-            images/products-icon/png/apple@2x.png 2x
-          "
-          media="(min-width: 320px)"
-        />
-        <img
-          class=""
-          src="./images/products-icon/webp/apple.webp"
-          alt="icon apple"
-          width="50"
-        />
-      </picture>
-      <p class="features-item">16kg</p>
-      <span class="features-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</span>
-    </li>
-    <li class="features-blok">
-      <picture>
-        <source
-          srcset="
-            ./images/products-icon/webp/heart.webp    1x,
-            ./images/products-icon/webp/heart@2x.webp 2x
-          "
-          media="(min-width: 320px)"
-          type="image/webp"
-        />
-        <source
-          srcset="
-            images/products-icon/png/heart.png    1x,
-            images/products-icon/png/heart@2x.png 2x
-          "
-          media="(min-width: 320px)"
-        />
-        <img
-          class=""
-          src="./images/products-icon/webp/heart.webp"
-          alt="icon heart"
-          width="44"
-        />
-      </picture>
-      <p class="features-item">84</p>
-      <span class="features-text">Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</span>
-    </li>
-  </ul>
+<section class="features">
+  <div class="container">
+    <ul class="list features-flex">
+      <li class="features-blok">
+        <picture>
+          <source
+            srcset="
+              ./images/products-icon/webp/milk.webp    1x,
+              ./images/products-icon/webp/milk@2x.webp 2x
+            "
+            media="(min-width: 320px)"
+            type="image/webp"
+          />
+          <source
+            srcset="
+              images/products-icon/png/milk.png    1x,
+              images/products-icon/png/milk@2x.png 2x
+            "
+            media="(min-width: 320px)"
+          />
+          <img
+            class=""
+            src="./images/products-icon/webp/milk.webp"
+            alt="icon milk"
+            width="33"
+          />
+        </picture>
+        <p class="features-item">721</p>
+        <span class="features-text"
+          >Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</span
+        >
+      </li>
+      <li class="features-blok">
+        <picture>
+          <source
+            srcset="
+              ./images/products-icon/webp/apple.webp    1x,
+              ./images/products-icon/webp/apple@2x.webp 2x
+            "
+            media="(min-width: 320px)"
+            type="image/webp"
+          />
+          <source
+            srcset="
+              images/products-icon/png/apple.png    1x,
+              images/products-icon/png/apple@2x.png 2x
+            "
+            media="(min-width: 320px)"
+          />
+          <img
+            class=""
+            src="./images/products-icon/webp/apple.webp"
+            alt="icon apple"
+            width="50"
+          />
+        </picture>
+        <p class="features-item">16kg</p>
+        <span class="features-text"
+          >Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</span
+        >
+      </li>
+      <li class="features-blok">
+        <picture>
+          <source
+            srcset="
+              ./images/products-icon/webp/heart.webp    1x,
+              ./images/products-icon/webp/heart@2x.webp 2x
+            "
+            media="(min-width: 320px)"
+            type="image/webp"
+          />
+          <source
+            srcset="
+              images/products-icon/png/heart.png    1x,
+              images/products-icon/png/heart@2x.png 2x
+            "
+            media="(min-width: 320px)"
+          />
+          <img
+            class=""
+            src="./images/products-icon/webp/heart.webp"
+            alt="icon heart"
+            width="44"
+          />
+        </picture>
+        <p class="features-item">84</p>
+        <span class="features-text"
+          >Aliquam ac dui vel dui vulputate consectetur. Mauris massa.</span
+        >
+      </li>
+    </ul>
+  </div>
 </section>
