--- a/src/sass/layouts/_section-features.scss
+++ b/src/sass/layouts/_section-features.scss
@@ -1,22 +1,20 @@
 .features {
-  padding-top: 39px;
+  padding-top: 20px;
   padding-bottom: 59px;
+  background-color: $background-made-footer-locations;
 
   @include for-size(tablet) {
-    padding-top: 66px;
+    padding-top: 33px;
     padding-bottom: 140px;
   }
 
   @include for-size(desktop) {
-    padding-top: 39px;
+    padding-top: 20px;
     padding-bottom: 139px;
   }
 }
 
-//.features-bg {
-//  width: 100%;
-//  //background-color: $background-made-footer-locations;
-//}
+
 
 .features-item {
   text-align: left;
@@ -25,7 +23,7 @@
   line-height: 1.14;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  //color: $accent-color;
+  color: $accent-color;
   margin-top: 16px;
   margin-bottom: 13px;
 
