--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -18,6 +18,7 @@
 @import './layouts/section-products';
 @import './layouts/section-made';
 @import './layouts/section-features';
+@import './layouts/section-pictures';
 @import './layouts/section-slider';
 @import './layouts/section-locations';
 @import './layouts/footer';
