add images from section

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,12 +4,7 @@
         <h2 class="section-title ">products</h2>
         <ul class="products-list">
             <li class="products-item ice-cream">
-                <picture>
-                    <!-- <source srcset="./image/section2/pic1-desktop.jpg 1x, ./image/section2/pic1-desktop@2x.jpg 2x" media="(min-width: 1200px)">
-                    <source srcset="./image/section2/pic1-tablet.jpg 1x, ./image/section2/pic1-tablet@2x.jpg 2x" media="(min-width: 768px)">
-                    <source srcset="./image/section2/pic1-mobile.jpg 1x, ./image/section2/pic1-mobile@2x.jpg 2x" media="(max-width: 767px)"> -->
-                    <!-- <img class="product-image" src="./images/section2/home-pic1.png" alt=""> -->
-                </picture>
+                <div class="img-ice-cream"></div>
                 <h3 class="products-title">ice cream</h3>
                 <p class="products-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et. dolore magna
@@ -21,7 +16,7 @@
                 </button>
             </li>
             <li class="products-item ice-coffee">
-                <img class="product-image" src="" alt="">
+                <div class="img-ice-coffee"></div>
                 <h3 class="products-title">ice coffee</h3>
                 <p class="products-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et. dolore magna
@@ -33,7 +28,7 @@
                 </button>
             </li>
             <li class="products-item milkshakes">
-                <img class="product-image" src="" alt="">
+                <div class="img-milkshakes"></div>
                 <h3 class="products-title">milkshakes</h3>
                 <p class="products-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et. dolore magna
