--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,5 +1,5 @@
 <header class="page-header">
-  <div class="page-header__container container">
+  <div class="page-header__container">
     <a class="page-header__logo" href="">
       <img src="./images/logo/logo.png" alt="" />
     </a>
@@ -33,20 +33,18 @@
         aria-expanded="false"
       >
         <svg
-          class="mobile-menu__icon"
+          class="mobile-menu__icon--menu"
           width="20"
           height="20"
           aria-label="mobile menu switcher"
           aria-expanded="false"
         >
-          <svg class="mobile-menu__icon--menu" width="20" height="20">
-            <use href="./images/sprite.svg#menu"></use>
-          </svg>
+          <use href="./images/sprite.svg#menu"></use>
         </svg>
       </button>
       <button class="page-header__btn-buy button" type="button">
-        Buy now
-        <svg class="button__icon" width="20" height="20">
+        <span class="title">Buy now</span>
+        <svg class="button__icon" width="15" height="15">
           <use
             href="./images/sprite.svg#arrow-to-right"
             width="15px"
@@ -79,7 +77,16 @@
       </svg>
     </button>
 
-    <button class="mobile-menu__btn-buy button" type="button">Buy now</button>
+    <button class="mobile-menu__btn-buy button" type="button">
+      <span class="title">Buy now</span>
+      <svg class="button__icon" width="15" height="15">
+        <use
+          href="./images/sprite.svg#arrow-to-right"
+          width="15px"
+          height="15px"
+        ></use>
+      </svg>
+    </button>
 
     <nav class="nav">
       <ul class="nav__list list">
