--- a/src/sass/layouts/_mobile-menu.scss
+++ b/src/sass/layouts/_mobile-menu.scss
@@ -49,6 +49,9 @@
   &__menu-button--open {
     background-color: transparent;
     border: transparent;
+    @media screen and (min-width: 1200px) {
+      display: none;
+    }
   }
 
   &__menu-button--close {
@@ -71,6 +74,7 @@
     border: inherit;
 
     color: #d41443;
+    fill: #d41443;
 
     background-color: white;
 
@@ -88,6 +92,7 @@
     &:focus {
       color: white;
       background: #c7133e;
+      fill: white;
     }
   }
 }
