--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -1,30 +1,28 @@
 .page-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
 
   &__container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+
     display: flex;
-    @media screen and (max-width: 767px) {
-      padding-top: 6px;
-    }
+    justify-content: space-between;
+    align-items: center;
+
+    margin-left: auto;
+    margin-right: auto;
+
+    padding: 6px 15px;
 
     @media screen and (min-width: 768px) and (max-width: 1199px) {
-      width: 768px;
-      justify-content: space-between;
-
-      padding-top: 33px;
-      padding-left: 34px;
+      padding: 37px 34px 0px;
     }
 
     @media screen and (min-width: 1200px) {
       width: 1200px;
-      justify-content: space-between;
-      align-items: center;
-      padding-top: 37px;
+      padding: 37px 46px 0px;
     }
   }
 
@@ -37,9 +35,11 @@
     display: flex;
   }
 
-  &__btn-buy {
+  &__btn-buy.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 44px;
-
     font-weight: bold;
     font-size: 16px;
     line-height: 21px;
@@ -48,8 +48,14 @@
     border: inherit;
 
     color: #d41443;
+    fill: #d41443;
 
     background-color: white;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    @media screen and (max-width: 767px) {
+      display: none;
+    }
 
     @media screen and (min-width: 768px) {
       min-width: 160px;
@@ -60,15 +66,11 @@
     &:focus {
       color: white;
       background: #c7133e;
+      fill: white;
     }
   }
-}
-
-.page-header__btn-buy {
-  display: none;
-
-  @media screen and (min-width: 768px) {
-    display: block;
+  .title {
+    padding-right: 12px;
   }
 }
 
@@ -100,18 +102,3 @@
     color: #d41443;
   }
 }
-
-.button__icon {
-  fill: #d41443;
-}
-
-// .mobile-menu__menu-button--open.is-open {
-//   display: none;
-// }
-
-// .mobile-menu.is-open.is-close {
-//   display: none;
-// }
-// .mobile-menu.is-close {
-//   display: block;
-// }
