--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -1,10 +1,10 @@
 .hero {
   // display: none;
-//   width: 100%;
-//   height: 502px;
-  display: none;
-  width: 320px;
-//   height: 502px;
+  width: 100%;
+  //   height: 502px;
+  // display: none;
+  // width: 320px;
+  height: 502px;
 
   background-color: #ffb8ca;
   margin-left: auto;
@@ -20,43 +20,43 @@
 //   background-repeat: no-repeat;
 //   background-position: center;
 //   background-size: contain;
-// background-image: url('../images/hero/ice-s/ice-mob.png'); 
-              
+// background-image: url('../images/hero/ice-s/ice-mob.png');
+
 //         @media screen and (min-device-pixel-ratio: 2),
 //               screen and (-webkit-min-device-pixel-ratio: 2),
 //               screen and (-o-min-device-pixel-ratio: 2/1),
 //               screen and (min-resolution: 192dpi),
 //               screen and (min-resolution: 2dppx) {
-        
+
 //               background-image: url('../images/hero/ice-s/ice-mob@2x.png');
-                  
+
 //             }
-              
+
 //     @media screen and (min-width: 768px) {
 //         max-width: 768px;
 //       //   height: 399px;
 
-//         background-image: url('../images/hero/ice-s/ice-tab.png');  
+//         background-image: url('../images/hero/ice-s/ice-tab.png');
 //         @media screen and (min-device-pixel-ratio: 2),
 //               screen and (-webkit-min-device-pixel-ratio: 2),
 //               screen and (-o-min-device-pixel-ratio: 2/1),
 //               screen and (min-resolution: 192dpi),
 //               screen and (min-resolution: 2dppx) {
-        
+
 //               background-image: url('../images/hero/ice-s/ice-tab@2x.png');
 //         }
 //     }
 //     @media screen and (min-width: 1200px) {
 //         max-width: 1280px;
 //       //   height: 665px;
-//         background-image: 
-//                 url('../images/hero/ice-s/ice-desk.png');  
+//         background-image:
+//                 url('../images/hero/ice-s/ice-desk.png');
 //         @media screen and (min-device-pixel-ratio: 2),
 //               screen and (-webkit-min-device-pixel-ratio: 2),
 //               screen and (-o-min-device-pixel-ratio: 2/1),
 //               screen and (min-resolution: 192dpi),
 //               screen and (min-resolution: 2dppx) {
-        
+
 //                   background-image:  url('../images/hero/ice-s/ice-desk@2x.png');
 //         }
 //      }
