--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -24,7 +24,7 @@
   bottom: 0;
   right: 32px;
   width: 171px;
-  outline: 2px solid teal;
+  // outline: 2px solid teal;
   z-index: -1;
 }
 .title-hero-white {
@@ -49,7 +49,6 @@
   }
 }
 
-
 .button-product {
   height: 24px;
   width: 61px;
@@ -68,13 +67,13 @@
 .button-made {
   height: 24px;
   width: 83px;
-  
+
   font-size: 16px;
   line-height: 21px;
   border-radius: 22px;
   font-size: 8px;
   line-height: 0.8;
-  
+
   border: inherit;
   color: $accent-color;
   background-color: $primary-white-color;
@@ -132,4 +131,3 @@
 //         }
 //      }
 //     }
-
