--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -14,6 +14,7 @@ $colors: (
   'sliderBorder': #e1e1e1,
   'socials': #fea5bb,
   'lightBgrd': #fff5f6,
+  'btncolor': #ffffff,
 );
 @function getColor($key) {
   @return map-get($colors, $key);
