--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -54,7 +54,9 @@ img {
   }
 
   @include for-size(desktop) {
-    width: 1080px;
+    width: 1126px;
+    padding-left: 38px;
+    padding-right: 38px;
   }
 }
 
