--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -230,7 +230,7 @@
 }
 .header-navigation-list:not(:last-child) {
   @include for-size(desktop) {
-    padding-right: 35px;
+    margin-right: 35px;
   }
 }
 .header-pr-link {
