--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -53,6 +53,7 @@
 .header-burger-button-svg {
   width: 40px;
   height: 40px;
+  transition: fill 250ms $timing-function;
 }
 .header-icon-close {
   display: none;
@@ -144,6 +145,7 @@
 .header-menu-button:hover .header-menu-svg,
 .header-menu-button:focus .header-menu-svg {
   fill: currentColor;
+  transition: fill 250ms $timing-function;
 }
 .header-menu-tablet {
   @include for-size(tablet) {
