Добавил секцию продукты

--- a/src/sass/layouts/_hero.scss
+++ b/src/sass/layouts/_hero.scss
@@ -265,7 +265,9 @@
 }
 
 .eco-link {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 18px;
   height: 18px;
   background-color: $color-main;
@@ -275,6 +277,10 @@
     width: 26px;
     height: 26px;
   }
+}
+
+.arrow-right {
+  fill: $color-accent;
 }
 
 .hero-circle {
