--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -7,6 +7,7 @@
 @import './layouts/header';
 @import './components/modal-menu';
 @import './layouts/hero';
+@import './layouts/products';
 @import './layouts/recipe';
 @import './layouts/components';
 @import './layouts/locations';
