--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -51,7 +51,13 @@
                     incididunt ut labore et
                 </p>
 
-                <a href="#" class="eco-link link"></a>
+                <a href="#" class="eco-link link">
+                    <svg class="arrow-right" viewBox="0 0 100 85" width="6" height="5">
+                        <polygon
+                            points="58.263,0.056 100,41.85 58.263,83.641 30.662,83.641 62.438,51.866 0,51.866 0,31.611 62.213,31.611 30.605,0 58.263,0.056">
+                        </polygon>
+                    </svg>
+                </a>
             </div>
         </div>
 
