Задал цвет секциям products

--- a/src/sass/layouts/_products.scss
+++ b/src/sass/layouts/_products.scss
@@ -190,11 +190,11 @@
       }
     }
 
-    .beige-bg {
+    &.beige-bg {
       background-color: $color-main-product-2;
     }
 
-    .green-bg {
+    &.green-bg {
       background-color: $color-main-product-3;
     }
   }
