--- a/src/sass/config/_color-scheme.scss
+++ b/src/sass/config/_color-scheme.scss
@@ -24,6 +24,7 @@ $secondary-accent-color: #ecebeb;
 $header-bg-color: #ffb8ca;
 $primary-bg-color: $white;
 $secondary-bg-color: #fff5f6;
+$demarcation-accent-color: #fff9f7;
 
 // дополнительные цвета для слайдера
 $primary-decor-color: #e1e1e1;
@@ -37,4 +38,4 @@ $primary-overlay-decor-color: #f0d1a5;
 $secondary-overlay-decor-color: #c2e297;
 $alternate-overlay-decor-color: #ffb8ca;
 
-$color-icon: #FEA5BB;
+$color-icon: #fea5bb;
